appId: keybase.ios
---
- runFlow:
    when:
      visible:
        text: "Teams"
    commands:
      - tapOn:
          text: "Teams"
- tapOn:
    text: "Chat"
- extendedWaitUntil:
    visible:
      id: "chat-inbox-list"
    timeout: 3000
- takeScreenshot: tests/results/ios-debug/smoke-chat
