appId: keybase.ios
---
- runFlow:
    when:
      visible:
        text: "Teams"
    commands:
      - tapOn:
          text: "Teams"
- tapOn:
    text: "Files"
- extendedWaitUntil:
    visible:
      id: "files-browser"
    timeout: 3000
- takeScreenshot: tests/results/ios-debug/smoke-files
